# complang

./: .gitignore  README.md  checkpoint.json  complang.sln  config.py  generate_report.py  main.py  runcommand.py  test_report.md  test_report_2.md
test_projects/anthropic_claude_3_7_sonnet_c__x/: CMakeLists.txt  Dockerfile  README.md  main.cpp
test_projects/anthropic_claude_3_7_sonnet_c__x/src/: db_handler.cpp  db_handler.h  main.cpp  user_routes.cpp  user_routes.h
test_projects/anthropic_claude_3_7_sonnet_c__x/src/models/: user.h
test_projects/anthropic_claude_3_7_sonnet_c_x/: Dockerfile  Program.cs  UserAPI.csproj
test_projects/anthropic_claude_3_7_sonnet_java/: .gitignore  Dockerfile  README.md  pom.xml
test_projects/anthropic_claude_3_7_sonnet_javascript/: Dockerfile  README.md  package.json  server.js
test_projects/anthropic_claude_3_7_sonnet_python/: Dockerfile  app.py  requirements.txt
test_projects/anthropic_claude_3_7_sonnet_thinking_c__x/: CMakeLists.txt  Dockerfile  main.cpp
test_projects/anthropic_claude_3_7_sonnet_thinking_c_x/: User.cs  UserApi.csproj
test_projects/anthropic_claude_3_7_sonnet_thinking_clojure/: Dockerfile  project.clj
test_projects/anthropic_claude_3_7_sonnet_thinking_common_lisp/: Dockerfile  README.md  app.lisp  user-api.asd
test_projects/anthropic_claude_3_7_sonnet_thinking_crystal/: Dockerfile  shard.yml
test_projects/anthropic_claude_3_7_sonnet_thinking_d_lang/: .dockerignore  Dockerfile  README.md  dub.json
test_projects/anthropic_claude_3_7_sonnet_thinking_elixir/: .dockerignore  .gitignore  Dockerfile  mix.exs
test_projects/anthropic_claude_3_7_sonnet_thinking_go/: Dockerfile  README.md  go.mod  main.go
test_projects/anthropic_claude_3_7_sonnet_thinking_haskell/: Dockerfile  haskell-crud-api.cabal
test_projects/anthropic_claude_3_7_sonnet_thinking_haskell/src/: DB.hs  Main.hs  Models.hs  Types.hs
test_projects/anthropic_claude_3_7_sonnet_thinking_idris/: Dockerfile  api.ipkg  crud-api.ipkg
test_projects/anthropic_claude_3_7_sonnet_thinking_java/: Dockerfile  README.md  pom.xml
test_projects/anthropic_claude_3_7_sonnet_thinking_javascript/: Dockerfile  db.js  index.js  package.json
test_projects/anthropic_claude_3_7_sonnet_thinking_kotlin/: Dockerfile  build.gradle.kts  settings.gradle.kts
test_projects/anthropic_claude_3_7_sonnet_thinking_lua/: Dockerfile  mime.types  nginx.conf
test_projects/anthropic_claude_3_7_sonnet_thinking_nim/: Dockerfile  app.nim  app.nimble  crud_api.nimble  server.nim
test_projects/anthropic_claude_3_7_sonnet_thinking_ocaml/: Dockerfile  dune  dune-project
test_projects/anthropic_claude_3_7_sonnet_thinking_perl/: Dockerfile  README.md  app.pl
test_projects/anthropic_claude_3_7_sonnet_thinking_php/: Database.php  Dockerfile  User.php  config.php  db.php  index.php
test_projects/anthropic_claude_3_7_sonnet_thinking_python/: Dockerfile  app.py
test_projects/anthropic_claude_3_7_sonnet_thinking_raku/: .dockerignore  Dockerfile  META6.json  README.md  app.raku  docker-compose.yml
test_projects/anthropic_claude_3_7_sonnet_thinking_ruby/: Dockerfile  Gemfile  app.rb
test_projects/anthropic_claude_3_7_sonnet_thinking_rust/: Cargo.toml  Dockerfile
test_projects/anthropic_claude_3_7_sonnet_thinking_rust/src/: config.rs  main.rs  models.rs
test_projects/anthropic_claude_3_7_sonnet_thinking_scala/: Dockerfile  build.sbt
test_projects/anthropic_claude_3_7_sonnet_thinking_typescript/: Dockerfile  package.json
test_projects/google_gemini_2_0_flash_001_c__x/: .dockerignore  CMakeLists.txt  Dockerfile  corrected_plan.txt  db.cpp  db.h  main.cpp  user.cpp  user.h
test_projects/google_gemini_2_0_flash_001_c_x/: Complang.cs  Complang.csproj  ComplangApi.csproj  Dockerfile  Program.cs  User.cs  UserContext.cs  UserController.cs  complang_api.csproj  crud_api.csproj
test_projects/google_gemini_2_0_flash_001_clojure/: Dockerfile  deps.edn  project.clj
test_projects/google_gemini_2_0_flash_001_common_lisp/: Dockerfile  app.lisp  cl-base.lisp  complang-crud.asd  complang.lisp  crud-api.asd  crud.asd  main.lisp  plan.txt  project.clj  task1.lisp  users-api.asd  users.lisp
test_projects/google_gemini_2_0_flash_001_crystal/: .env  Dockerfile  shard.yml
test_projects/google_gemini_2_0_flash_001_d_lang/: Dockerfile  app.d  dub.json  dub.sdl
test_projects/google_gemini_2_0_flash_001_elixir/: .gitignore  Dockerfile  README.md  create_elixir_app.sh  mix.exs  setup_db.sh  start.sh  start_server.sh
test_projects/google_gemini_2_0_flash_001_go/: Dockerfile  Dockerfile_test  go.mod  main.go
test_projects/google_gemini_2_0_flash_001_haskell/: Database.hs  Dockerfile  README.md  cabal.project  cabal.project.local  complang.cabal  haskell-crud.cabal  init.sql  package.yaml  stack.yaml
test_projects/google_gemini_2_0_flash_001_haskell/app/: Main.hs
test_projects/google_gemini_2_0_flash_001_haskell/src/: Lib.hs  Main.hs
test_projects/google_gemini_2_0_flash_001_idris/: Dockerfile  Main.idr  complang-api.ipkg  idris.ipkg  myapp.idr  myapp.ipkg
test_projects/google_gemini_2_0_flash_001_java/: Dockerfile  mvnw  mvnw.cmd  pom.xml
test_projects/google_gemini_2_0_flash_001_javascript/: Dockerfile  app.js  index.js  (+3 more)
test_projects/google_gemini_2_0_flash_001_ocaml/: Dockerfile  README.md  complang.opam  complang_api.opam  dune  dune-project  main.ml  users.ml
test_projects/google_gemini_2_0_flash_001_ocaml/lib/: complang.ml
test_projects/google_gemini_2_0_flash_001_ocaml/src/: db.ml  dune  main.ml  user.ml
test_projects/google_gemini_2_0_flash_001_rust/: .env  .env.example  Cargo.toml  Dockerfile  temp_file
test_projects/google_gemini_2_0_flash_001_rust/migrations/: 20240124000000_create_users_table.sql
test_projects/google_gemini_2_0_flash_001_rust/src/: main.rs
test_projects/meta_llama_llama_3_3_70b_instruct_haskell/: Dockerfile  Main.hs  complang.cabal
test_projects/openai_o3_mini_high_haskell/: Dockerfile  Main.hs  complang-api.cabal
test_projects/openai_o3_mini_high_rust/: Cargo.toml  Dockerfile
test_projects/openai_o3_mini_high_rust/src/: main.rs
(+487 files in other folders)
