cabal-version:      2.4
name:               haskell-crud-api
version:            0.1.0.0
synopsis:           CRUD API for users using PostgreSQL
-- description:
license:            BSD-3-Clause
author:             Haskell Developer
maintainer:         example@example.com
category:           Web
build-type:         Simple

executable haskell-crud-api
    main-is:          Main.hs
    
    other-modules:    Api
                     ,Database
    
    build-depends:    base ^>=4.14.1.0
                     ,wai ^>=3.2.3
                     ,warp ^>=3.3.14
                     ,http-types ^>=0.12.3
                     ,aeson ^>=1.5.6.0
                     ,postgresql-simple ^>=0.6.4
                     ,text ^>=1.2.4.1
                     ,bytestring ^>=0.10.12.0
                     ,mtl ^>=2.2.2
    
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
