
[package]
name = "rust_crud_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4"
tokio-postgres = "0.7.6"
deadpool-postgres = "0.10.2"
config = "0.11"
