cabal-version: 3.0
name: complang
version: 0.1.0.0
synopsis: A simple CRUD API in Haskell
description: Please see README.md

executable complang-exe
  main-is: Main.hs
  other-modules:
      Lib
  ghc-options:
      - -threaded
      - -rtsopts
      - -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , http-types
    , network
    , postgresql-simple
    , scotty
    , text
  default-language: GHC2021