cabal-version:      3.0
name:               complang
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Your Name
maintainer:         your.email@example.com
-- copyright:
build-type:         Simple
extra-source-files: CHANGELOG.md

executable complang
  main-is:          Main.hs
  -- other-modules:
  other-extensions:
      OverloadedStrings
  build-depends:
      base >=4.14 && <4.19
    , servant
    , servant-server
    , aeson
    , persistent
    , persistent-postgresql
    , persistent-template
    , mtl
    , text
    , wai
    , warp
    , bytestring
    , transformers
    , pool
    , resource-pool
  hs-source-dirs:   src
  default-language: Haskell2010
