cabal-version: 3.0

name:           haskell-crud
version:        0.1.0.0
-- synopsis:
-- description:
homepage:       https://github.com/githubuser/haskell-crud#readme
license:        MIT
license-file:   LICENSE
author:         Author Name
maintainer:     author@example.com
copyright:      2024 Author Name

-- category:
build-type:     Simple
extra-source-files: CHANGELOG.md

executable haskell-crud
    main-is:          Main.hs
    other-modules:
        Database
    -- other-extensions:
    build-depends:    base >=4.14.3.0 && <4.18,
                        wai,
                        warp,
                        aeson,
                        http-types,
                        bytestring,
                        text,
                        postgresql-simple,
                        containers,
                        transformers,
                        mtl
    hs-source-dirs:   app
    default-language: Haskell2010
