opam-version: "2.0"
name: "complang"
version: "0.1.0"
synopsis: "A CRUD API in OCaml"
description: "Connects to a PostgreSQL database and exposes /users endpoints."
maintainer: ["Your Name <your.email@example.com>"]
authors: ["Your Name"]
license: "MIT"

depends: [
  "dune" {>= "3.0"}
  "cohttp-lwt-unix"
  "yojson"
  "pgx"
  "uri"
  "lwt_ppx"
  "odoc" {with-doc}
]
build: [["dune" "build" "-p" name "-j" jobs]]

dev-repo: "https://github.com/yourusername/complang"
