[package]
name = "crud_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.0.1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-rt = "2"
sqlx = { version = "0.6.3", features = ["runtime-tokio", "postgres", "macros"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
derive_more = "0.99.19"
