
[package]
name = "rust_crud_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
envy = "0.4"
serde_json = "1.0"
actix-web-httpauth = "0.8"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "rust_crud_api"
path = "src/main.rs"
