
name:           complang
version:        0.1.0.0
synopsis:        Complang API
description:     Complang API for managing users
license:         MIT
license-file:    LICENSE
author:          Your Name
maintainer:      your@email.com
build-type:      Simple
cabal-version:   >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Main
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.12 && < 5
                    , scotty
                    , postgresql-simple
                    , aeson
                    , generic-deriving
  default-language:    Haskell2010
