cabal-version:       >=1.10
name:                complang-api
version:             0.1.0.0
build-type:          Simple

executable complang-api-exe
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5,
                       scotty,
                       postgresql-simple,
                       aeson,
                       text,
                       bytestring
  default-language:    Haskell2010
