
[package]
name = "complang_api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "complang_api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
